The search function works, but needs an enter and hover effect

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 </head>
 
 
-<body class="bg-dark">
+<body class="">
     <div id="dropdown" class="dropdown-content">
         <input type="text" placeholder="City" id="dropdown-input">
-
+        <ul id="city-options"></ul>
     </div>
 </body>
 
