Search bar completed

--- a/index.html
+++ b/index.html
@@ -18,10 +18,14 @@
 </head>
 
 
-<body class="">
-    <div id="dropdown" class="dropdown-content">
-        <input type="text" placeholder="City" id="dropdown-input">
+<body class="bg-gradient-custom">
+    <div id="dropdown" class="dropdown-content mx-auto mt-5 card bg-dark">
+        <input type="text" placeholder="City" class="form-control custom-height px-4 fs-5" id="dropdown-input">
         <ul id="city-options"></ul>
+    </div>
+    <div id="weather-display" class="card">
+
+
     </div>
 </body>
 
