Search bar is now able to display the correct city, clear the search bar on click and enter, aswell as have a hover effect

--- a/index.html
+++ b/index.html
@@ -19,11 +19,16 @@
 
 
 <body class="bg-gradient-custom">
-    <div id="dropdown" class="dropdown-content mx-auto mt-5 card bg-dark">
-        <input type="text" placeholder="City" class="form-control custom-height px-4 fs-5" id="dropdown-input">
+    <div id="dropdown" class="dropdown-content mx-auto mt-5 card bg-dark card-width">
+        <input type="text" placeholder="City" class="form-control custom-height px-4 fs-5 " id="dropdown-input">
         <ul id="city-options"></ul>
     </div>
-    <div id="weather-display" class="card">
+    <div id="weather-display" class="card card-width mx-auto mt-5">
+        <div class="cardheader" id="city">
+            <h5 class="display-6 text-dark text-center py-2" id="city-name">Anderson</h5>
+        </div>
+        <div class="card-body">
+        </div>
 
 
     </div>
