--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"
         defer></script>
-    <script src="main.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
+    <script type="module" src="main.js" defer></script>
+
 </head>
 
 
@@ -28,6 +30,10 @@
             <h5 class="display-6 text-dark text-center py-2" id="city-name">Anderson</h5>
         </div>
         <div class="card-body">
+            <ul class="nav nav-pills" id="weekly-weather">
+
+
+            </ul>
         </div>
 
 
