Created the basics of on click fucntionality to call get temps

--- a/index.html
+++ b/index.html
@@ -30,8 +30,11 @@
             <h5 class="display-6 text-dark text-center py-2" id="city-name">Anderson</h5>
         </div>
         <div class="card-body">
-            <ul class="nav nav-pills" id="weekly-weather">
+            <ul class="nav nav-tabs" id="weekly-weather">
 
+
+            </ul>
+            <ul id="weather">
 
             </ul>
         </div>
