Save point refactoring code to just have 1 map

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 
 
             </ul>
-            <ul id="weather">
+            <table class="table table-dark table-striped" id="weather">
 
-            </ul>
+            </table>
         </div>
 
 
