--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 
 
-<body class="bg-gradient-custom">
+<body class="bg-gradient-custom bg-dark">
     <div id="dropdown" class="dropdown-content mx-auto mt-5 card bg-dark card-width">
         <input type="text" placeholder="City" class="form-control custom-height px-4 fs-5 " id="dropdown-input">
         <ul id="city-options"></ul>
@@ -31,11 +31,15 @@
         </div>
         <div class="card-body">
             <ul class="nav nav-tabs" id="weekly-weather">
-
-
             </ul>
-            <table class="table table-dark table-striped" id="weather">
-
+            <table class="table table-dark table-striped text-center" id="weather">
+                <thead>
+                    <tr>
+                        <th>Time</th>
+                        <th>Temp</th>
+                    </tr>
+                </thead>
+                <tbody id="weather-contents"></tbody>
             </table>
         </div>
 
