--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <thead>
                     <tr>
                         <th>Time</th>
-                        <th>Temp</th>
+                        <th>Temp &degF</th>
                     </tr>
                 </thead>
                 <tbody id="weather-contents"></tbody>
