Finallized the UI

--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
             <h5 class="display-6 text-dark text-center py-2" id="city-name">Anderson</h5>
         </div>
         <div class="card-body">
-            <ul class="nav nav-tabs" id="weekly-weather">
+            <ul class="nav nav-tabs mx-auto " id="weekly-weather">
             </ul>
-            <table class="table table-dark table-striped text-center" id="weather">
+            <table class="table table-dark table-striped text-center mt-3" id="weather">
                 <thead>
                     <tr>
-                        <th>Time</th>
-                        <th>Temp &degF</th>
+                        <th class="fs-3">Time</th>
+                        <th class="fs-3">Temp &degF</th>
                     </tr>
                 </thead>
                 <tbody id="weather-contents"></tbody>
